--- a/.github/workflows/code-quality-main.yaml
+++ b/.github/workflows/code-quality-main.yaml
@@ -1,22 +1,22 @@
-# Same as `code-quality-pr.yaml` but triggered on commit to main branch
-# and runs on all files (instead of only the changed ones)
+# # Same as `code-quality-pr.yaml` but triggered on commit to main branch
+# # and runs on all files (instead of only the changed ones)
 
-name: Code Quality Main
+# name: Code Quality Main
 
-on:
-  push:
-    branches: [main]
+# on:
+#   push:
+#     branches: [main]
 
-jobs:
-  code-quality:
-    runs-on: ubuntu-latest
+# jobs:
+#   code-quality:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+#       - name: Set up Python
+#         uses: actions/setup-python@v2
 
-      - name: Run pre-commits
-        uses: pre-commit/action@v2.0.3
+#       - name: Run pre-commits
+#         uses: pre-commit/action@v2.0.3
