--- a/configs/experiment/vgg_imagenet.yaml
+++ b/configs/experiment/vgg_imagenet.yaml
@@ -25,7 +25,7 @@ model:
   optimizer:
     lr: 0.002
   net:
-    input_size: 50176 # 224*224
+    input_size: 150528 # 224*224x3
   compile: false
 
 data:
